# nordic-stuff

./: README.md
cs_ipt_multi/: README.md
cs_ipt_multi/anchor_initiator/: README.rst  prj.conf
cs_ipt_multi/anchor_initiator/src/: main.c
cs_ipt_multi/target_reflector/: prj.conf
cs_ipt_multi/target_reflector/src/: main.c
cs_ras_multi/: .gitignore  README.md
cs_ras_multi/Multilateration/: README.md  config.json  multilateration.py  requirements.txt
cs_ras_multi/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
cs_ras_multi/lib/: CMakeLists.txt  global.h
cs_ras_multi/lib/ble/: ble.c  ble.h
cs_ras_multi/lib/calc/: calc.c  calc.h
cs_ras_multi/lib/cs/: cs.c  cs.h
cs_ras_multi/lib/sync/: sync.c  sync.h
cs_ras_multi/projects/: .gitignore
cs_ras_multi/src/: initator.c  reflector.c
flpr_sleep_test/: CMakeLists.txt  Kconfig  README.md  prj.conf  sysbuild.cmake  testcase.yaml
flpr_sleep_test/boards/: nrf54h20dk_nrf54h20_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay  nrf54lm20dk_nrf54lm20a_cpuapp.overlay
flpr_sleep_test/remote/: CMakeLists.txt  prj.conf  prj_silent.conf
flpr_sleep_test/src/: main_app.c
ipt_swap/: README.md
ipt_swap/free_running/: README.md
ipt_swap/init_peripheral/: Kconfig  README.rst  prj.conf
ipt_swap/refl_central/: README.rst  prj.conf
scan_cs_soak/: .gitignore  README.md
scan_cs_soak/beacon/: CMakeLists.txt  prj.conf
scan_cs_soak/common/: cs_ifft.c  cs_ifft.h
scan_cs_soak/gateway/: CMakeLists.txt  Kconfig  prj.conf
scan_cs_soak/gateway_modeswitch/: CMakeLists.txt  Kconfig  prj.conf
(+19 files in other folders)
